--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts --exec ts-node"
   },
   "keywords": [],
